Added link http://ankushjindal.github.io/

--- a/index.html
+++ b/index.html
@@ -20,3 +20,4 @@
 <p>Currently accepting job offers</p>
 <hr>
 <p><i>Links that I find interesting</i></p>
+<br><i>2016-05-22 20:50:27</i><a href='http://ankushjindal.github.io/'>http://ankushjindal.github.io/</a>
