--- a/index.html
+++ b/index.html
@@ -23,3 +23,6 @@
 <br><i>2016-05-22</i> <a href='https://medium.com/@tristanharris/how-technology-hijacks-peoples-minds-from-a-magician-and-google-s-design-ethicist-56d62ef5edf3'>How Technology Hijacks People’s Minds — from a Magician and Google’s Design Ethicist — Medium</a>
 <br><i>2016-05-31</i> <a href='http://www.squeakland.org/resources/books/readingList.jsp'>
 Alan Kay's Reading List</a>
+<br><i>2016-06-03</i> <a href='https://news.ycombinator.com/item?id=11828253'>Social media platform cycle and ads</a>
+<br><i>2016-06-03</i> <a href='https://news.ycombinator.com/item?id=11828253'>Social media platform cycle and ads</a>
+<br><i>2016-06-03</i> <a href='https://news.ycombinator.com/item?id=11828253'>Social media platform cycle and ads</a>
