--- a/index.html
+++ b/index.html
@@ -24,6 +24,4 @@
 <br><i>2016-05-31</i> <a href='http://www.squeakland.org/resources/books/readingList.jsp'>
 Alan Kay's Reading List</a>
 <br><i>2016-06-03</i> <a href='https://news.ycombinator.com/item?id=11828253'>Social media platform cycle and ads</a>
-<br><i>2016-06-03</i> <a href='https://news.ycombinator.com/item?id=11828253'>Social media platform cycle and ads</a>
-<br><i>2016-06-03</i> <a href='https://news.ycombinator.com/item?id=11828253'>Social media platform cycle and ads</a>
-<br><i>2016-06-03</i> <a href='https://news.ycombinator.com/item?id=11828253'>Social media platform cycle and ads</a>
+<br><i>2016-06-03</i> <a href='http://dangrover.com/blog/2016/04/20/bots-wont-replace-apps.html'>Dan Grover | Bots won't replace apps. Better apps will replace apps.</a>
