--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <a href="mailto:a_jindal@students.iitmandi.ac.in">IIT Mandi email</a>
 <a href="mailto:anji@itu.dk">ITU Copenhagen email</a>
 <a href="http://students.iitmandi.ac.in/~a_jindal/">Public folder</a>
-<p><a href="http://students.iitmandi.ac.in/~a_jindal/Resume.pdf">Resume</a></p>
+<p><a href="Resume.pdf">Resume</a></p>
 <p>Currently accepting job offers</p>
 <hr>
 <p><i>Links that I find interesting</i></p>
