--- a/index.html
+++ b/index.html
@@ -25,3 +25,4 @@
 Alan Kay's Reading List</a>
 <br><i>2016-06-03</i> <a href='https://news.ycombinator.com/item?id=11828253'>Social media platform cycle and ads</a>
 <br><i>2016-06-03</i> <a href='http://dangrover.com/blog/2016/04/20/bots-wont-replace-apps.html'>Dan Grover | Bots won't replace apps. Better apps will replace apps.</a>
+<br><i>2016-06-28</i> <a href='https://kalaarisurvey.typeform.com/to/EO385C'>Fintech India: Survey by Kalaari Capital</a>
