Added link https://medium.com/@yegg/mental-models-i-find-repeatedly-useful-936f1cc405d

--- a/index.html
+++ b/index.html
@@ -27,3 +27,4 @@ Alan Kay's Reading List</a>
 <br><i>2016-06-03</i> <a href='http://dangrover.com/blog/2016/04/20/bots-wont-replace-apps.html'>Dan Grover | Bots won't replace apps. Better apps will replace apps.</a>
 <br><i>2016-06-28</i> <a href='https://kalaarisurvey.typeform.com/to/EO385C'>Fintech India: Survey by Kalaari Capital</a>
 <br><i>2016-06-28</i> <a href='https://blog.ycombinator.com/new-cities'>New Cities - Y Combinator Posthaven</a>
+<br><i>2016-07-12</i> <a href='https://medium.com/@yegg/mental-models-i-find-repeatedly-useful-936f1cc405d'>Mental Models I Find Repeatedly Useful — Medium</a>
