--- a/index.html
+++ b/index.html
@@ -29,3 +29,4 @@ Alan Kay's Reading List</a>
 <br><i>2016-06-28</i> <a href='https://blog.ycombinator.com/new-cities'>New Cities - Y Combinator Posthaven</a>
 <br><i>2016-07-12</i> <a href='https://medium.com/@yegg/mental-models-i-find-repeatedly-useful-936f1cc405d'>Mental Models I Find Repeatedly Useful — Medium</a>
 <br><i>2016-07-14</i> <a href='http://www.ft.com/cms/s/0/24035fc2-3e45-11e6-9f2c-36b487ebd80a.html'>Why we no longer trust the experts - FT.com</a>
+<br><i>2016-07-27</i> <a href='https://sivers.org/2c'>Don’t add your 2 cents | Derek Sivers</a>
