Added link http://jgthms.com/web-design-in-4-minutes/

--- a/index.html
+++ b/index.html
@@ -1,33 +1,79 @@
-<!-- <p>I like <span title="Accessibility>Usability">good</span> design</p> -->
-<!-- <hr> -->
-<p><b>Ankush Jindal</b></p>
-<hr>
-<a href="https://github.com/ankushjindal">Github</a>
-<a href="https://news.ycombinator.com/user?id=travis_bickle">Hacker News</a>
-<a href="https://medium.com/@jindalankush95">Medium</a>
-<a href="https://in.linkedin.com/in/jindalankush95">Linkedin</a>
-<a href="https://twitter.com/jindalankush95">Twitter</a>
-<a href="https://www.facebook.com/jindal.ankush95/">Facebook</a>
-<a href="https://www.reddit.com/user/iamnottravis/">Reddit</a>
-<a href="http://stackexchange.com/users/3469088/travis-bickle">Stack Exchange</a>
-<a href="https://www.quora.com/profile/Ankush-Jindal-2">Quora</a>
-<a href="http://www.imdb.com/user/ur28414609/">IMDb</a>
-<a href="mailto:jindal.ankush95@gmail.com">Personal email</a>
-<a href="mailto:a_jindal@students.iitmandi.ac.in">IIT Mandi email</a>
-<a href="mailto:anji@itu.dk">ITU Copenhagen email</a>
-<a href="http://students.iitmandi.ac.in/~a_jindal/">Public folder</a>
-<p><a href="Resume.pdf">Resume</a></p>
-<p>Currently accepting job offers</p>
-<hr>
-<p><i>Links that I find interesting</i></p>
-<br><i>2016-05-22</i> <a href='https://medium.com/@tristanharris/how-technology-hijacks-peoples-minds-from-a-magician-and-google-s-design-ethicist-56d62ef5edf3'>How Technology Hijacks People’s Minds — from a Magician and Google’s Design Ethicist — Medium</a>
-<br><i>2016-05-31</i> <a href='http://www.squeakland.org/resources/books/readingList.jsp'>
-Alan Kay's Reading List</a>
-<br><i>2016-06-03</i> <a href='https://news.ycombinator.com/item?id=11828253'>Social media platform cycle and ads</a>
-<br><i>2016-06-03</i> <a href='http://dangrover.com/blog/2016/04/20/bots-wont-replace-apps.html'>Dan Grover | Bots won't replace apps. Better apps will replace apps.</a>
-<br><i>2016-06-28</i> <a href='https://kalaarisurvey.typeform.com/to/EO385C'>Fintech India: Survey by Kalaari Capital</a>
-<br><i>2016-06-28</i> <a href='https://blog.ycombinator.com/new-cities'>New Cities - Y Combinator Posthaven</a>
-<br><i>2016-07-12</i> <a href='https://medium.com/@yegg/mental-models-i-find-repeatedly-useful-936f1cc405d'>Mental Models I Find Repeatedly Useful — Medium</a>
-<br><i>2016-07-14</i> <a href='http://www.ft.com/cms/s/0/24035fc2-3e45-11e6-9f2c-36b487ebd80a.html'>Why we no longer trust the experts - FT.com</a>
-<br><i>2016-07-27</i> <a href='https://sivers.org/2c'>Don’t add your 2 cents | Derek Sivers</a>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Ankush Jindal</title>
+		<style type="text/css">
+			/*For Social Toggle*/
+			#social{
+			  display: none;
+			}
+			.social_show:focus ~ #social {
+			  display: block;
+			}
+
+			/*Formatting*/
+			body{
+				margin:1em auto;
+				max-width:40em;
+				padding:0 .62em;
+				font:1.2em/1.62em sans-serif;
+			}
+			h1,h2,h3 {
+				line-height:1.2em;
+			}
+			@media print{
+				body{
+					max-width:none
+				}
+			}
+			span {
+			    cursor:pointer;
+			    color:blue;
+			    text-decoration:underline;
+			}
+		</style>
+	</head>
+	<body>
+		<p><b>Ankush Jindal</b></p>
+		<hr>
+		<!-- SKILLS START -->
+		<p>Studying Computer Science and Engineering at <a href="http://iitmandi.ac.in/">IIT Mandi</a>. Recently went to <a href="https://www.itu.dk/">ITU Copenhagen</a> for semester exchange. Right now doing internship at <a href="http://khoslalabs.com/">Khosla Labs</a>. Python and Android developer who gets really passionate about product that I work on right from service and design to business. Have a look at my<a href="Resume.pdf">Resume</a>, I am currently <i>accepting job offers</i>.</p>
+		<!-- SKILLS ENDS -->
+		<hr>
+		
+		<!-- SOCIAL START -->
+		<span class="social_show" tabindex="0">Social Profile</span>
+		<section id="social">
+			<a href="https://github.com/ankushjindal">Github</a>
+			<a href="https://news.ycombinator.com/user?id=travis_bickle">Hacker News</a>
+			<a href="https://medium.com/@jindalankush95">Medium</a>
+			<a href="https://in.linkedin.com/in/jindalankush95">Linkedin</a>
+			<a href="https://twitter.com/jindalankush95">Twitter</a>
+			<a href="https://www.facebook.com/jindal.ankush95/">Facebook</a>
+			<a href="https://www.reddit.com/user/iamnottravis/">Reddit</a>
+			<a href="http://stackexchange.com/users/3469088/travis-bickle">Stack Exchange</a>
+			<a href="https://www.quora.com/profile/Ankush-Jindal-2">Quora</a>
+			<a href="http://www.imdb.com/user/ur28414609/">IMDb</a>
+			<a href="mailto:jindal.ankush95@gmail.com">Personal email</a>
+			<a href="mailto:a_jindal@students.iitmandi.ac.in">IIT Mandi email</a>
+			<a href="mailto:anji@itu.dk">ITU Copenhagen email</a>
+			<a href="http://students.iitmandi.ac.in/~a_jindal/">Public folder</a>
+		</section>
+		<!-- SOCIAL ENDS -->
+		<hr>
+
+		<!-- LINKS STARTS -->
+		<b><i>Links that I find interesting:</i></b>
+		<br><i>2016-05-22</i> <a href='https://medium.com/@tristanharris/how-technology-hijacks-peoples-minds-from-a-magician-and-google-s-design-ethicist-56d62ef5edf3'>How Technology Hijacks People’s Minds</a>
+		<br><i>2016-05-31</i> <a href='http://www.squeakland.org/resources/books/readingList.jsp'>
+		Alan Kay's Reading List</a>
+		<br><i>2016-06-03</i> <a href='https://news.ycombinator.com/item?id=11828253'>Social media platform cycle and ads</a>
+		<br><i>2016-06-03</i> <a href='http://dangrover.com/blog/2016/04/20/bots-wont-replace-apps.html'>Dan Grover | Bots won't replace apps. Better apps will replace apps.</a>
+		<br><i>2016-06-28</i> <a href='https://kalaarisurvey.typeform.com/to/EO385C'>Fintech India: Survey by Kalaari Capital</a>
+		<br><i>2016-06-28</i> <a href='https://blog.ycombinator.com/new-cities'>New Cities - Y Combinator Posthaven</a>
+		<br><i>2016-07-12</i> <a href='https://medium.com/@yegg/mental-models-i-find-repeatedly-useful-936f1cc405d'>Mental Models I Find Repeatedly Useful — Medium</a>
+		<br><i>2016-07-14</i> <a href='http://www.ft.com/cms/s/0/24035fc2-3e45-11e6-9f2c-36b487ebd80a.html'>Why we no longer trust the experts - FT.com</a>
+		<br><i>2016-07-27</i> <a href='https://sivers.org/2c'>Don’t add your 2 cents | Derek Sivers</a>
 <br><i>2016-07-27</i> <a href='http://jgthms.com/web-design-in-4-minutes/'>Web Design in 4 minutes</a>
