Added link http://jgthms.com/web-design-in-4-minutes/

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<p><b>Ankush Jindal</b></p>
 		<hr>
 		<!-- SKILLS START -->
-		<p>Studying Computer Science and Engineering at <a href="http://iitmandi.ac.in/">IIT Mandi</a>. Recently went to <a href="https://www.itu.dk/">ITU Copenhagen</a> for semester exchange. Right now doing internship at <a href="http://khoslalabs.com/">Khosla Labs</a>. Python and Android developer who gets really passionate about product that I work on right from service and design to business. Have a look at my<a href="Resume.pdf">Resume</a>, I am currently <i>accepting job offers</i>.</p>
+		<p>Studying Computer Science and Engineering at <a href="http://iitmandi.ac.in/">IIT Mandi</a>. Recently went to <a href="https://www.itu.dk/">ITU Copenhagen</a> for semester exchange. Right now doing internship at <a href="http://khoslalabs.com/">Khosla Labs</a>. Python and Android developer who gets really passionate about product that I work on right from service and design to business. Have a look at my <a href="Resume.pdf">resume</a>, I am currently <i>accepting job offers</i>.</p>
 		<!-- SKILLS ENDS -->
 		<hr>
 		
@@ -76,4 +76,4 @@
 		<br><i>2016-07-12</i> <a href='https://medium.com/@yegg/mental-models-i-find-repeatedly-useful-936f1cc405d'>Mental Models I Find Repeatedly Useful — Medium</a>
 		<br><i>2016-07-14</i> <a href='http://www.ft.com/cms/s/0/24035fc2-3e45-11e6-9f2c-36b487ebd80a.html'>Why we no longer trust the experts - FT.com</a>
 		<br><i>2016-07-27</i> <a href='https://sivers.org/2c'>Don’t add your 2 cents | Derek Sivers</a>
-<br><i>2016-07-27</i> <a href='http://jgthms.com/web-design-in-4-minutes/'>Web Design in 4 minutes</a>
+				<br><i>2016-07-27</i> <a href='http://jgthms.com/web-design-in-4-minutes/'>Web Design in 4 minutes</a>
