--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 		<hr>
 
 		<!-- LINKS STARTS -->
-		<span class="links show" tabindex="2">Links that I find interesting</span>
+		<span class="links show" tabindex="2">Links that I found interesting</span>
 		<section id="links">
 			<i>2016-07-27</i> <a href='https://sivers.org/2c'>Don’t add your 2 cents | Derek Sivers</a><br>
 			<i>2016-07-27</i> <a href='http://jgthms.com/web-design-in-4-minutes/'>Web Design in 4 minutes</a><br>
@@ -130,7 +130,7 @@
 		<hr>
 		
 		<!-- BLOG STARTS -->
-		<span class="blog show" tabindex="2">Articles I wrote (on Medium)</span>
+		<span class="blog show" tabindex="2">Articles I wrote</span>
 		<section id="blog">
 			<a href='https://medium.com/@jindalankush95/what-is-god-up-to-ca84d0d51ed6'>What is God up to?</a><br>
 		</section>
