--- a/index.html
+++ b/index.html
@@ -1,162 +1,162 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Ankush Jindal</title>
-		<style type="text/css">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Ankush Jindal</title>
+        <style type="text/css">
 
-			/*For Section Toggle*/
+            /*For Section Toggle*/
 
-			section:hover{
-			  display: block;
-			}
-			section{
-			  display: none;
-			}
-			span:focus + section {
-			  display: block;
-			}
-			
-			/*Formatting*/
-			body{
-				margin:1em auto;
-				max-width:40em;
-				padding:0 .62em;
-				font:1.2em/1.62em sans-serif;
-			}
-			h1,h2,h3 {
-				line-height:1.2em;
-			}
-			@media print{
-				body{
-					max-width:none
-				}
-			}
-			span.show {
-			    cursor:pointer;
-			    /*color:blue;*/
-			    text-decoration:underline;
-			}
-		</style>
-	</head>
-	<body>
-		<p><b>Ankush Jindal</b></p>
-		<hr>
-		<!-- SKILLS START -->
-		<p>Studying Computer Science and Engineering at <a href="http://iitmandi.ac.in/">IIT Mandi</a>. Recently went to <a href="https://www.itu.dk/">ITU Copenhagen</a> for semester exchange. Right now I am doing internship at <a href="http://khoslalabs.com/">Khosla Labs</a>. Python and Android developer who gets really passionate about product that I work on right from service and design to business. Have a look at my <a href="Resume.pdf">resume</a>, I am currently <i>accepting job offers</i>.</p>
-		<!-- SKILLS ENDS -->
-		<hr>
+            section:hover{
+              display: block;
+            }
+            section{
+              display: none;
+            }
+            span:focus + section {
+              display: block;
+            }
+            
+            /*Formatting*/
+            body{
+                margin:1em auto;
+                max-width:40em;
+                padding:0 .62em;
+                font:1.2em/1.62em sans-serif;
+            }
+            h1,h2,h3 {
+                line-height:1.2em;
+            }
+            @media print{
+                body{
+                    max-width:none
+                }
+            }
+            span.show {
+                cursor:pointer;
+                /*color:blue;*/
+                text-decoration:underline;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>Ankush Jindal</h1>
+        <hr>
+        <!-- SKILLS START -->
+        <p>Studying Computer Science and Engineering at <a href="http://iitmandi.ac.in/">IIT Mandi</a>. Recently went to <a href="https://www.itu.dk/">ITU Copenhagen</a> for semester exchange. Right now I am doing internship at <a href="http://khoslalabs.com/">Khosla Labs</a>. Python and Android developer who gets really passionate about product that I work on right from the service and design to the business. Have a look at my <a href="Resume.pdf">resume</a>, I am currently <i>accepting job offers</i>.</p>
+        <!-- SKILLS ENDS -->
+        <hr>
 
-		<!-- PROJECTS STARTS -->
-		<span class="projects show" tabindex="3">Projects and Work Experiences</span>
-		<section id="projects">
-		<dl>
-			<dt><b><a href="http://khoslalabs.com/">Khosla Labs</a></b>, -- Bengaluru, Software Developer</dt>
-			<dd>
-				<i>Internship | June 2016 - Present</i><br>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
-				Skills used: <em>Android, Kafka, Spark, Cassandra</em>
-			</dd>
-			<dt><b>Correctness Proof of Various Algorithms Using <a href="https://coq.inria.fr/">Coq</a></b>, Programming Language Seminar</dt>
-			<dd>
-				<i>Course Project | Mar 2016 - Jun 2016</i><br>
-				Coq proof assistant was used to prove the correctness of tree sort and KMP string search algorithm as well as runtime analysis for KMP string search algorithm.<br>
-				Skills used: <em>Coq</em>
-			</dd>
-			<dt><b>Service Design Case Study</b>, Introduction to Service Design</dt>
-			<dd>
-				<i>Course Project | Feb 2016 - Jun 2016</i><br>
-				Multiple principles and tools of service design were applied to a web based service, Praice, which is a tool for job applicants to communicate their personality to recruiters. [<a href="">Report</a>]<br>
-			</dd>
-			<dt><b>Back Home : VR in space</b>, NASA Space Apps Challenge, Copenhagen -- <em>Local Winner</em></dt>
-			<dd>
-				<i>Competition Project | May 2016</i><br>
-				Use of virtual reality in space is a challenge- accelerometer and gyroscope does not work as intended in zero gravity, weight and size of equipments is a major constraint. As a part of two day hackathon, our team of six proposed and designed a simple solution for it which uses Google Cardboard, 3-D printing and piggyback on existing resources on space station/spaceship. [<a href="">Video</a>]<br>
-			</dd>
-			<dt><b>File Tone Transfer Protocol</b>, System Practicum</dt>
-			<dd>
-				<i>Course Project | Oct 2015 - Nov 2015</i><br>
-				Created protocol and proof-of-concept for sending files encrypted as sound, which when heard by other computers at earshot range decrypts back to file.<br>
-				Skills used: <em>Python, Sound Processing, Cryptography, File Handling, Networking</em>
-			</dd>
-			<dt><b><a href="http://amicshop.com/" title="Company exited">Amicus Co.</a></b>, -- New Delhi, Data Scientist</dt>
-			<dd>
-				<i>Internship | June 2015</i><br>
-				Developed pipeline for an Ecommerce company Amicus Co. by creating and joining data scraping, data cleaning, natural language evaluation and machine learning code for reviews from different platforms.<br>
-				Skills used: <em>Scrapy, Selenium, Python, NLTK and Scikit-learn</em>
-			</dd>
-			<dt><b>Automation of Software Update on IIT Mandi's Insite</b>, WING IIT Mandi</dt>
-			<dd>
-				<i>Project | May 2015</i><br>
-				As a part of Website and Information Group, have created python and bash scripts to keep software repository on IIT Mandi's local intranet up-to-date.<br>
-			</dd>
-			<dt><b>Smart Home Security Kit</b>, Design Practicum</dt>
-			<dd>
-				<i>Course Project | Mar 2015 - May 2015</i><br>
-				Building a smart home security kit to be installed on door, using raspberry pi and Parse server. Created an email bot for the same.<br>
-			</dd>
-			<dt><b>Feature based sentiment analysis of hotel reviews</b>, Inter IIT Tech Meet, Kharagpur -- <em>Winner</em></dt>
-			<dd>
-				<i>Competition Project | Dec 2014 - Feb 2015</i><br>
-				Represented IIT Mandi in Third Inter IIT Tech Meet in Data Analytics’ challenge. Developed feature based sentiment analysis scripts on scraped hotel reviews.  The scripts were automated and presented feature based ratings for the hotels for given city(after scraping reviews from multiple sources). Won first prize in the challenge.<br>
-				Skills used: <em>Java, Stanford CoreNLP, Python, Scrapy, Javascript, HTML</em>
-			</dd>
-			<dt><b>Social marketplace website</b>, Database Practicum</dt>
-			<dd>
-				<i>Course Project | Sep 2014 - Nov 2014</i><br>
-				Developed a social marketplace based on barter system where users can exchange their products among themselves.<br>
-				Skills used: <em>HTML5, MySQL, PHP</em>
-			</dd>
-		</section>
-		<!-- PROJECTS ENDS -->
-		<hr>
+        <!-- PROJECTS STARTS -->
+        <span class="projects show" tabindex="3">Projects and Work Experiences</span>
+        <section id="projects">
+        <dl>
+            <dt><b><a href="http://khoslalabs.com/">Khosla Labs</a></b>, -- Bengaluru, Software Developer</dt>
+            <dd>
+                <i>Internship | June 2016 - Present</i><br>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
+                Skills used: <em>Android, Kafka, Spark, Cassandra</em>
+            </dd>
+            <dt><b>Correctness Proof of Various Algorithms Using <a href="https://coq.inria.fr/">Coq</a></b>, Programming Language Seminar</dt>
+            <dd>
+                <i>Course Project | Mar 2016 - Jun 2016</i><br>
+                Coq proof assistant was used to prove the correctness of tree sort and KMP string search algorithm as well as runtime analysis for KMP string search algorithm.<br>
+                Skills used: <em>Coq</em>
+            </dd>
+            <dt><b>Service Design Case Study</b>, Introduction to Service Design</dt>
+            <dd>
+                <i>Course Project | Feb 2016 - Jun 2016</i><br>
+                Multiple principles and tools of service design were applied to a web based service, Praice, which is a tool for job applicants to communicate their personality to recruiters. [<a href="">Report</a>]<br>
+            </dd>
+            <dt><b>Back Home : VR in space</b>, NASA Space Apps Challenge, Copenhagen -- <em>Local Winner</em></dt>
+            <dd>
+                <i>Competition Project | May 2016</i><br>
+                Use of virtual reality in space is a challenge- accelerometer and gyroscope does not work as intended in zero gravity, weight and size of equipments is a major constraint. As a part of two day hackathon, our team of six proposed and designed a simple solution for it which uses Google Cardboard, 3-D printing and piggyback on existing resources on space station/spaceship. [<a href="">Video</a>]<br>
+            </dd>
+            <dt><b>File Tone Transfer Protocol</b>, System Practicum</dt>
+            <dd>
+                <i>Course Project | Oct 2015 - Nov 2015</i><br>
+                Created protocol and proof-of-concept for sending files encrypted as sound, which when heard by other computers at earshot range decrypts back to file.<br>
+                Skills used: <em>Python, Sound Processing, Cryptography, File Handling, Networking</em>
+            </dd>
+            <dt><b><a href="http://amicshop.com/" title="Company exited">Amicus Co.</a></b>, -- New Delhi, Data Scientist</dt>
+            <dd>
+                <i>Internship | June 2015</i><br>
+                Developed pipeline for an Ecommerce company Amicus Co. by creating and joining data scraping, data cleaning, natural language evaluation and machine learning code for reviews from different platforms.<br>
+                Skills used: <em>Scrapy, Selenium, Python, NLTK and Scikit-learn</em>
+            </dd>
+            <dt><b>Automation of Software Update on IIT Mandi's Insite</b>, WING IIT Mandi</dt>
+            <dd>
+                <i>Project | May 2015</i><br>
+                As a part of Website and Information Group, have created python and bash scripts to keep software repository on IIT Mandi's local intranet up-to-date.<br>
+            </dd>
+            <dt><b>Smart Home Security Kit</b>, Design Practicum</dt>
+            <dd>
+                <i>Course Project | Mar 2015 - May 2015</i><br>
+                Building a smart home security kit to be installed on door, using raspberry pi and Parse server. Created an email bot for the same.<br>
+            </dd>
+            <dt><b>Feature based sentiment analysis of hotel reviews</b>, Inter IIT Tech Meet, Kharagpur -- <em>Winner</em></dt>
+            <dd>
+                <i>Competition Project | Dec 2014 - Feb 2015</i><br>
+                Represented IIT Mandi in Third Inter IIT Tech Meet in Data Analytics’ challenge. Developed feature based sentiment analysis scripts on scraped hotel reviews.  The scripts were automated and presented feature based ratings for the hotels for given city(after scraping reviews from multiple sources). Won first prize in the challenge.<br>
+                Skills used: <em>Java, Stanford CoreNLP, Python, Scrapy, Javascript, HTML</em>
+            </dd>
+            <dt><b>Social marketplace website</b>, Database Practicum</dt>
+            <dd>
+                <i>Course Project | Sep 2014 - Nov 2014</i><br>
+                Developed a social marketplace based on barter system where users can exchange their products among themselves.<br>
+                Skills used: <em>HTML5, MySQL, PHP</em>
+            </dd>
+        </section>
+        <!-- PROJECTS ENDS -->
+        <hr>
 
-		<!-- LINKS STARTS -->
-		<span class="links show" tabindex="2">Links that I found interesting</span>
-		<section id="links">
-			<i>2016-07-27</i> <a href='https://sivers.org/2c'>Don’t add your 2 cents | Derek Sivers</a><br>
-			<i>2016-07-27</i> <a href='http://jgthms.com/web-design-in-4-minutes/'>Web Design in 4 minutes</a><br>
-			<i>2016-07-14</i> <a href='http://www.ft.com/cms/s/0/24035fc2-3e45-11e6-9f2c-36b487ebd80a.html'>Why we no longer trust the experts - FT.com</a><br>
-			<i>2016-07-12</i> <a href='https://medium.com/@yegg/mental-models-i-find-repeatedly-useful-936f1cc405d'>Mental Models I Find Repeatedly Useful</a><br>
-			<i>2016-06-28</i> <a href='https://kalaarisurvey.typeform.com/to/EO385C'>Fintech India: Survey by Kalaari Capital</a><br>
-			<i>2016-06-28</i> <a href='https://blog.ycombinator.com/new-cities'>New Cities - Y Combinator Posthaven</a><br>
-			<i>2016-06-03</i> <a href='https://news.ycombinator.com/item?id=11828253'>Social media platform cycle and ads</a><br>
-			<i>2016-06-03</i> <a href='http://dangrover.com/blog/2016/04/20/bots-wont-replace-apps.html'>Dan Grover | Bots won't replace apps. Better apps will replace apps.</a><br>
-			<i>2016-05-31</i> <a href='http://www.squeakland.org/resources/books/readingList.jsp'>Alan Kay's Reading List</a><br>
-			<i>2016-05-22</i> <a href='https://medium.com/@tristanharris/how-technology-hijacks-peoples-minds-from-a-magician-and-google-s-design-ethicist-56d62ef5edf3'>How Technology Hijacks People’s Minds</a>
-		</section>
-		<!-- LINKS ENDS -->
-		<hr>
-		
-		<!-- BLOG STARTS -->
-		<span class="blog show" tabindex="2">Articles I wrote</span>
-		<section id="blog">
-			<a href='https://medium.com/@jindalankush95/what-is-god-up-to-ca84d0d51ed6'>What is God up to?</a><br>
-		</section>
-		<!-- BLOG ENDS -->
-		<hr>
+        <!-- LINKS STARTS -->
+        <span class="links show" tabindex="2">Links that I found interesting</span>
+        <section id="links">
+            <i>2016-07-27</i> <a href='https://sivers.org/2c'>Don’t add your 2 cents | Derek Sivers</a><br>
+            <i>2016-07-27</i> <a href='http://jgthms.com/web-design-in-4-minutes/'>Web Design in 4 minutes</a><br>
+            <i>2016-07-14</i> <a href='http://www.ft.com/cms/s/0/24035fc2-3e45-11e6-9f2c-36b487ebd80a.html'>Why we no longer trust the experts - FT.com</a><br>
+            <i>2016-07-12</i> <a href='https://medium.com/@yegg/mental-models-i-find-repeatedly-useful-936f1cc405d'>Mental Models I Find Repeatedly Useful</a><br>
+            <i>2016-06-28</i> <a href='https://kalaarisurvey.typeform.com/to/EO385C'>Fintech India: Survey by Kalaari Capital</a><br>
+            <i>2016-06-28</i> <a href='https://blog.ycombinator.com/new-cities'>New Cities - Y Combinator Posthaven</a><br>
+            <i>2016-06-03</i> <a href='https://news.ycombinator.com/item?id=11828253'>Social media platform cycle and ads</a><br>
+            <i>2016-06-03</i> <a href='http://dangrover.com/blog/2016/04/20/bots-wont-replace-apps.html'>Dan Grover | Bots won't replace apps. Better apps will replace apps.</a><br>
+            <i>2016-05-31</i> <a href='http://www.squeakland.org/resources/books/readingList.jsp'>Alan Kay's Reading List</a><br>
+            <i>2016-05-22</i> <a href='https://medium.com/@tristanharris/how-technology-hijacks-peoples-minds-from-a-magician-and-google-s-design-ethicist-56d62ef5edf3'>How Technology Hijacks People’s Minds</a>
+        </section>
+        <!-- LINKS ENDS -->
+        <hr>
+        
+        <!-- BLOG STARTS -->
+        <span class="blog show" tabindex="2">Articles I wrote</span>
+        <section id="blog">
+            <a href='https://medium.com/@jindalankush95/what-is-god-up-to-ca84d0d51ed6'>What is God up to?</a><br>
+        </section>
+        <!-- BLOG ENDS -->
+        <hr>
 
-		<!-- SOCIAL START -->
-		<span class="social show" tabindex="1">Social Profile</span>
-		<section id="social">
-			<a href="https://github.com/ankushjindal">Github</a>
-			<a href="https://in.linkedin.com/in/jindalankush95">Linkedin</a>
-			<a href="https://news.ycombinator.com/user?id=travis_bickle">Hacker News</a>
-			<a href="https://www.reddit.com/user/iamnottravis/">Reddit</a>
-			<a href="http://stackexchange.com/users/3469088/travis-bickle">Stack Exchange</a>
-			<br><a href="https://www.facebook.com/jindal.ankush95/">Facebook</a>
-			<a href="https://twitter.com/jindalankush95">Twitter</a>
-			<a href="https://www.quora.com/profile/Ankush-Jindal-2">Quora</a>
-			<a href="https://medium.com/@jindalankush95">Medium</a>
-			<a href="http://www.imdb.com/user/ur28414609/">IMDb</a>
-			<br>
-			<a href="mailto:jindal.ankush95@gmail.com">Personal email</a>
-			<a href="mailto:a_jindal@students.iitmandi.ac.in">IIT Mandi email</a>
-			<a href="mailto:anji@itu.dk">ITU Copenhagen email</a>
-			<a href="http://students.iitmandi.ac.in/~a_jindal/">Public folder</a>
-		</section>
-		<!-- SOCIAL ENDS -->
+        <!-- SOCIAL START -->
+        <span class="social show" tabindex="1">Social Profile</span>
+        <section id="social">
+            <a href="https://github.com/ankushjindal">Github</a>
+            <a href="https://in.linkedin.com/in/jindalankush95">Linkedin</a>
+            <a href="https://news.ycombinator.com/user?id=travis_bickle">Hacker News</a>
+            <a href="https://www.reddit.com/user/iamnottravis/">Reddit</a>
+            <a href="http://stackexchange.com/users/3469088/travis-bickle">Stack Exchange</a>
+            <br><a href="https://www.facebook.com/jindal.ankush95/">Facebook</a>
+            <a href="https://twitter.com/jindalankush95">Twitter</a>
+            <a href="https://www.quora.com/profile/Ankush-Jindal-2">Quora</a>
+            <a href="https://medium.com/@jindalankush95">Medium</a>
+            <a href="http://www.imdb.com/user/ur28414609/">IMDb</a>
+            <br>
+            <a href="mailto:jindal.ankush95@gmail.com">Personal email</a>
+            <a href="mailto:a_jindal@students.iitmandi.ac.in">IIT Mandi email</a>
+            <a href="mailto:anji@itu.dk">ITU Copenhagen email</a>
+            <a href="http://students.iitmandi.ac.in/~a_jindal/">Public folder</a>
+        </section>
+        <!-- SOCIAL ENDS -->
 
-		<hr style="margin-bottom:1px">
-		<font size="2"><p style="margin-top:1px"><a href="mailto:jindal.ankush95@gmail.com"><img src="email.png" alt="Email" align="middle" style="margin-right:10px;"></a><a href="https://github.com/ankushjindal/ankushjindal.github.io"><img src="github.png" alt="Github" align="middle"></a> <span style="float:right;">Last updated on 2016-07-28</span></p>
+        <hr style="margin-bottom:1px">
+        <font size="2"><p style="margin-top:1px"><a href="mailto:jindal.ankush95@gmail.com"><img src="email.png" alt="Email" align="middle" style="margin-right:10px;"></a><a href="https://github.com/ankushjindal/ankushjindal.github.io"><img src="github.png" alt="Github" align="middle"></a> <span style="float:right;">Last updated on 2016-07-28</span></p>
