--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta property="og:title" content="Ankush Jindal" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Ankush Jindal</title>
 	<style type="text/css">
@@ -13,9 +14,10 @@
 		/*Formatting*/
 		html{ overflow-y: scroll; }
 		body{
-			margin:1em auto;
-			max-width:40em;
-			padding:0 .62em;
+			margin:40px auto;
+			max-width:650px;
+			padding:0 10px;
+			font-size:18px;
 			font:1.2em/1.62em sans-serif;
 		}
 		h1{ line-height:1.2em; }
