--- a/index.html
+++ b/index.html
@@ -39,31 +39,37 @@
 	<dl>
 		<dt><b><a href="http://khoslalabs.com/">Khosla Labs</a></b>, -- Bengaluru, Software Developer</dt>
 		<dd>
-			<i>Internship | June 2016 - Present</i><br>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
+			<i>Internship | June 2016 - Aug 2016</i><br>
+			<b> User Traits Prediction using Mobile Usage Data</b>- App probes were created for fetching data and pushing the same continusuoly using sync adapter through Kafaka Channels. The Kafka channels were consumed through Spark connector and were stored in Cassandra tables after pre-processing. The cleaned data was used for multi-level feature extraction through spark.<br>
 			Skills used: <em>Android, Kafka, Spark, Cassandra</em>
+		</dd>
+		<dt><b>Business intelligence dashboard for customer perception</b>, -- Angel Hackathon, Bengaluru</dt>
+		<dd>
+			<i>Project | July 2016</i><br>
+			<b> Participated in <a href="http://angelhack.com/angelhack-bangalore-2016/">Angel Hackathon</a>, by developing a <a href="http://www.hackathon.io/prodigy2">dashboard</a> for small and medium scale businesses, ranging in multiple verticals, to monitor and analyse customer's perception about one's business as gathered from online reviews, customer generated content and social media data. Sentiment analysis is used to generate an intelligent temporal and spatial dashboard from multiple sources(reviews and social) allowing the businesses to do a feature based analysis of one's business as compared with other similar businesses in local/global domain.<br>
+			Skills used: <em>Python, HPE Haven OnDemand, Javascript, d3js</em>
 		</dd>
 		<dt><b>Correctness Proof of Various Algorithms Using <a href="https://coq.inria.fr/">Coq</a></b>, Programming Language Seminar</dt>
 		<dd>
 			<i>Course Project | Mar 2016 - Jun 2016</i><br>
 			Coq proof assistant was used to prove the correctness of tree sort and KMP string search algorithm as well as runtime analysis for KMP string search algorithm.<br>
-			Skills used: <em>Coq</em>
+			Skills used: <em>Coq</em>. [<a href="pls.pdf">Report</a>]
 		</dd>
 		<dt><b>Service Design Case Study</b>, Introduction to Service Design</dt>
 		<dd>
 			<i>Course Project | Feb 2016 - Jun 2016</i><br>
-			Multiple principles and tools of service design were applied to a web based service, Praice, which is a tool for job applicants to communicate their personality to recruiters. [<a href="">Report</a>]<br>
+			Multiple principles and tools of service design were applied to a web based service, Praice, which is a tool for job applicants to communicate their personality to recruiters. [<a href="praice.pdf">Report</a>]<br>
 		</dd>
 		<dt><b>Back Home : VR in space</b>, NASA Space Apps Challenge, Copenhagen -- <em>Local Winner</em></dt>
 		<dd>
 			<i>Competition Project | May 2016</i><br>
-			Use of virtual reality in space is a challenge- accelerometer and gyroscope does not work as intended in zero gravity, weight and size of equipments is a major constraint. As a part of two day hackathon, our team of six proposed and designed a simple solution for it which uses Google Cardboard, 3-D printing and piggyback on existing resources on space station/spaceship. [<a href="">Video</a>]<br>
+			Use of virtual reality in space is a challenge- accelerometer and gyroscope does not work as intended in zero gravity, weight and size of equipments is a major constraint. As a part of two day hackathon, our team of six proposed and designed a simple solution for it which uses Google Cardboard, 3-D printing and piggyback on existing resources on space station/spaceship. [<a href="https://youtu.be/4r8owmH_o0c">Video</a>, <a href="https://youtu.be/TnaHa23zFKM">Pitch</a>]<br>
 		</dd>
 		<dt><b>File Tone Transfer Protocol</b>, System Practicum</dt>
 		<dd>
 			<i>Course Project | Oct 2015 - Nov 2015</i><br>
 			Created protocol and proof-of-concept for sending files encrypted as sound, which when heard by other computers at earshot range decrypts back to file.<br>
-			Skills used: <em>Python, Sound Processing, Cryptography, File Handling, Networking</em>
+			Skills used: <em>Python, Sound Processing, Cryptography, File Handling, Networking</em>. [<a href="http://students.iitmandi.ac.in/~a_jindal/group5.html">Report</a>]
 		</dd>
 		<dt><b><a href="http://amicshop.com/" title="Company exited">Amicus Co.</a></b>, -- New Delhi, Data Scientist</dt>
 		<dd>
@@ -79,7 +85,7 @@
 		<dt><b>Smart Home Security Kit</b>, Design Practicum</dt>
 		<dd>
 			<i>Course Project | Mar 2015 - May 2015</i><br>
-			Building a smart home security kit to be installed on door, using raspberry pi and Parse server. Created an email bot for the same.<br>
+			Building a smart home security kit to be installed on door, using raspberry pi and Parse server. Created an email bot for the same. [<a href="dp.pdf">Brochure</a>]<br>
 		</dd>
 		<dt><b>Feature based sentiment analysis of hotel reviews</b>, Inter IIT Tech Meet, Kharagpur -- <em>Winner</em></dt>
 		<dd>
@@ -92,6 +98,11 @@
 			<i>Course Project | Sep 2014 - Nov 2014</i><br>
 			Developed a social marketplace based on barter system where users can exchange their products among themselves.<br>
 			Skills used: <em>HTML5, MySQL, PHP</em>
+		</dd>
+		<dt><b>Fuzzy logic in stock prediction</b>, IIT Mandi</dt>
+		<dd>
+			<i>Project | June 2014 - Aug 2014</i><br>
+			Use of fuzzy logic and Matlab for data forecasting (Primary use: Stocks Prediction).
 		</dd>
 	</dl>
 	</section>
