--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<dt><b>Business intelligence dashboard for customer perception</b>, -- Angel Hackathon, Bengaluru</dt>
 		<dd>
 			<i>Project | July 2016</i><br>
-			<b> Participated in <a href="http://angelhack.com/angelhack-bangalore-2016/">Angel Hackathon</a>, by developing a <a href="http://www.hackathon.io/prodigy2">dashboard</a> for small and medium scale businesses, ranging in multiple verticals, to monitor and analyse customer's perception about one's business as gathered from online reviews, customer generated content and social media data. Sentiment analysis is used to generate an intelligent temporal and spatial dashboard from multiple sources(reviews and social) allowing the businesses to do a feature based analysis of one's business as compared with other similar businesses in local/global domain.<br>
+			Participated in <a href="http://angelhack.com/angelhack-bangalore-2016/">Angel Hackathon</a>, by developing a <a href="http://www.hackathon.io/prodigy2">dashboard</a> for small and medium scale businesses, ranging in multiple verticals, to monitor and analyse customer's perception about one's business as gathered from online reviews, customer generated content and social media data. Sentiment analysis is used to generate an intelligent temporal and spatial dashboard from multiple sources(reviews and social) allowing the businesses to do a feature based analysis of one's business as compared with other similar businesses in local/global domain.<br>
 			Skills used: <em>Python, HPE Haven OnDemand, Javascript, d3js</em>
 		</dd>
 		<dt><b>Correctness Proof of Various Algorithms Using <a href="https://coq.inria.fr/">Coq</a></b>, Programming Language Seminar</dt>
@@ -91,7 +91,7 @@
 		<dd>
 			<i>Competition Project | Dec 2014 - Feb 2015</i><br>
 			Represented IIT Mandi in Third Inter IIT Tech Meet in Data Analytics’ challenge. Developed feature based sentiment analysis scripts on scraped hotel reviews.  The scripts were automated and presented feature based ratings for the hotels for given city(after scraping reviews from multiple sources). Won first prize in the challenge.<br>
-			Skills used: <em>Java, Stanford CoreNLP, Python, Scrapy, Javascript, HTML</em>
+			Skills used: <em>Java, Stanford CoreNLP, Python, Scrapy, Javascript, HTML</em>. [<a href="kgp-report.pdf">Report</a>, <a href="kgp-ppt.pptx">Pitch</a>
 		</dd>
 		<dt><b>Social marketplace website</b>, Database Practicum</dt>
 		<dd>
