--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<dt><b><a href="http://khoslalabs.com/">Khosla Labs</a></b>, -- Bengaluru, Software Developer</dt>
 		<dd>
 			<i>Internship | June 2016 - Aug 2016</i><br>
-			<b> User Traits Prediction using Mobile Usage Data</b>- App probes were created for fetching data and pushing the same continusuoly using sync adapter through Kafaka Channels. The Kafka channels were consumed through Spark connector and were stored in Cassandra tables after pre-processing. The cleaned data was used for multi-level feature extraction through spark.<br>
+			<i> User Traits Prediction using Mobile Usage Data</i>- App probes were created for fetching data and pushing the same continusuoly using sync adapter through Kafaka Channels. The Kafka channels were consumed through Spark connector and were stored in Cassandra tables after pre-processing. The cleaned data was used for multi-level feature extraction through spark.<br>
 			Skills used: <em>Android, Kafka, Spark, Cassandra</em>
 		</dd>
 		<dt><b>Business intelligence dashboard for customer perception</b>, -- Angel Hackathon, Bengaluru</dt>
